# AccessLens-RAG-MarketAccessTool

./: .env.example  .gitignore  README.md  _run_eval.py  ingest.py  pyproject.toml  requirements.txt  seed_ingest.py
api/: main.py  models.py
api/routes/: health.py  query.py
evaluation/: __init__.py  eval_dataset.py  ragas_eval.py
frontend/: index.html
frontend/assets/: style.css
generation/: __init__.py  generator.py  prompt_templates.py
ingestion/: __init__.py  chunker.py  clinicaltrials_fetcher.py  embedder.py  openfda_fetcher.py  pubmed_fetcher.py
retrieval/: __init__.py  hybrid_search.py  query_rewriter.py  reranker.py
tests/: test_chunker.py  test_retrieval.py
vectorstore/: __init__.py  qdrant_store.py  schema.py
