[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "accesslens"
version = "1.0.0"
description = "EU Market Access Intelligence Tool — Production-grade RAG system for pharmaceutical and biotech professionals"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AccessLens Team" }]
keywords = ["RAG", "market-access", "HTA", "pharma", "EU", "EMA", "reimbursement"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.25.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "langchain>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "ragas>=0.1.9",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "langsmith>=0.1.77",
    "httpx>=0.27.0",
    "biopython>=1.83",
    "numpy>=1.26.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
accesslens-api = "api.main:run"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
